@@ -3,16 +3,17 @@ package mcvmcomputers.client.utils;
 import static mcvmcomputers.client.ClientMod.*;
 
 import java.util.Arrays;
+import java.util.List;
 
-import org.virtualbox_6_1.BitmapFormat;
-import org.virtualbox_6_1.GuestMonitorStatus;
-import org.virtualbox_6_1.Holder;
-import org.virtualbox_6_1.IConsole;
-import org.virtualbox_6_1.IMachine;
-import org.virtualbox_6_1.IProgress;
-import org.virtualbox_6_1.ISession;
-import org.virtualbox_6_1.LockType;
-import org.virtualbox_6_1.MachineState;
+import org.virtualbox_7_0.BitmapFormat;
+import org.virtualbox_7_0.GuestMonitorStatus;
+import org.virtualbox_7_0.Holder;
+import org.virtualbox_7_0.IConsole;
+import org.virtualbox_7_0.IMachine;
+import org.virtualbox_7_0.IProgress;
+import org.virtualbox_7_0.ISession;
+import org.virtualbox_7_0.LockType;
+import org.virtualbox_7_0.MachineState;
 
 import mcvmcomputers.client.gui.GuiFocus;
 import net.minecraft.client.MinecraftClient;
@@ -23,8 +24,8 @@ public class VMRunnable implements Runnable{
 		MinecraftClient mcc = MinecraftClient.getInstance();
 		while(true) {
 			try {
-				double deltaX = 0;
-				double deltaY = 0;
+				double deltaX;
+				double deltaY;
 				
 				deltaX = mouseCurX - mouseLastX;
 				deltaY = mouseCurY - mouseLastY;
@@ -34,7 +35,7 @@ public class VMRunnable implements Runnable{
 				IMachine m = vb.findMachine("VmComputersVm");
 				if(m.getState() == MachineState.PoweredOff) {
 					if(!vmTurningOff && vmTurnedOn) {
-						IProgress pr = m.launchVMProcess(vbManager.getSessionObject(), "headless", Arrays.asList());
+						IProgress pr = m.launchVMProcess(vbManager.getSessionObject(), "headless", List.of());
 						pr.waitForCompletion(-1);
 					}else {
 						vmUpdateThread = null;
@@ -65,16 +66,16 @@ public class VMRunnable implements Runnable{
 						console.getKeyboard().putScancodes(vmKeyboardScancodes);
 						vmKeyboardScancodes.clear();
 					}
-					Holder<Long> width = new Holder<Long>();
-					Holder<Long> height = new Holder<Long>();
-					Holder<Long> bitsPP = new Holder<Long>();
-					Holder<Integer> xOrigin = new Holder<Integer>();
-					Holder<Integer> yOrigin = new Holder<Integer>();
-					Holder<GuestMonitorStatus> status = new Holder<GuestMonitorStatus>();
+					Holder<Long> width = new Holder<>();
+					Holder<Long> height = new Holder<>();
+					Holder<Long> bitsPP = new Holder<>();
+					Holder<Integer> xOrigin = new Holder<>();
+					Holder<Integer> yOrigin = new Holder<>();
+					Holder<GuestMonitorStatus> status = new Holder<>();
 					console.getDisplay().getScreenResolution(0L, width, height, bitsPP, xOrigin, yOrigin, status);
 					Long w = width.value;
 					Long h = height.value;
-					byte[] image = null;
+					byte[] image;
 					try {
 						image = console.getDisplay().takeScreenShotToArray(0L, w, h, BitmapFormat.PNG);
 					}catch(Exception ex) {
@@ -84,7 +85,7 @@ public class VMRunnable implements Runnable{
 					ns.unlockMachine();
 					vmTextureBytesSize = image.length;
 					vmTextureBytes = image;
-			}catch(Exception ex) {} //TERRIBLE PRACTICE BTW
+			}catch(Exception ignored) {} //TERRIBLE PRACTICE BTW
 		}
 	}
 
